--- a/01_merge_facebook_data.Rmd
+++ b/01_merge_facebook_data.Rmd
@@ -20,7 +20,9 @@ library(tidyverse)
 df_crowdtangle <- read_csv("input/facebook_data//df_crowdtangle.csv") %>% 
   mutate(id_post = post_url %>% 
            str_extract("posts/\\d+$") %>% 
-           str_remove("posts/"))
+           str_remove("posts/"),
+         d_ct = 1,
+         d_pol = 0)
 ```
 
 ##### Politicamente
@@ -39,8 +41,7 @@ df_politicamente_tweets <- read_csv(
   "input/facebook_data/politicamente_be17_v6_tweets.csv"
 ) %>% 
   count(twitter_id) %>% 
-  rename(n_tweets = n) %>% 
-  left_join(df_politicamente_cands %>% select(candidato_id, twitter_id))
+  rename(n_tweets = n) 
 ```
 
 ```{r error=FALSE, message=FALSE,warning=FALSE}
@@ -48,15 +49,14 @@ df_politicamente <- df_politicamente_posts %>%
   left_join(df_politicamente_codif) %>% 
   select(id_post, mensaje_id, facebook_id, everything(), -id) %>% 
   left_join(df_politicamente_cands, by = "facebook_id") %>% 
-  select(
-    id_post, facebook_id, from_name, created_time, message,
+  left_join(df_politicamente_tweets)  %>% 
+  select(id_post, facebook_id, from_name, created_time, message,
     type, link, matches("_count"),
     matches("^codif_"), 
     candidato:distrito_dip, partido, d_mujer, nacimiento, coalicion, 
     gasto_total, gasto_rrss, gasto_rrss, gasto_rrss_pct, 
-    ingreso_total, votos, votos_pct, d_incumbente_gen, d_gano
-  ) %>% 
-  mutate(d_pol = 1L, d_ct = 0)
+    ingreso_total, votos, votos_pct, d_incumbente_gen, d_gano, n_tweets) %>% 
+  mutate(d_pol = 1, d_ct = 0) 
 
 ```
 
@@ -82,21 +82,16 @@ df_crowdtangle_std <- df_crowdtangle %>%
          #new CT variables:
          link_text = post_link_test, link_description, overperforming_score,
          #candidate level
-         candidate = candidato, candidate_district,
-         coalition = candidate_list, list = lista, party = candidate_party, 
-         candidate_birth = nacimiento, d_women = candidate_gender,
+         candidate = candidate_name, candidate_district,
+         coalition = candidate_list, party = candidate_party, 
+         candidate_birth = nacimiento, d_female = candidate_gender,
          d_incumbent_gen = candidate_incumbent,
          d_elected = candidate_elected, votes = candidate_votes,
          spending_total = candidate_spending,
          # reactions
          comments_count = comments,
          shares_count = shares,
-         likes_count = likes,
-         love_count = reaction_love,                 
-         wow_count = reaction_wow,                 
-         haha_count = reaction_haha,                 
-         sad_count = reaction_sad,                 
-         angry_count = reaction_angry
+         likes_count = likes
   ) %>% 
   mutate(created_time = created_time %>% 
            str_remove(" EDT") %>% 
@@ -104,7 +99,13 @@ df_crowdtangle_std <- df_crowdtangle %>%
            lubridate::with_tz("UTC"),
          candidate_birth = lubridate::ymd(candidate_birth),
          candidate = str_to_upper(candidate),
-         d_ct = 1L, d_pol = 0L)
+         d_ct = 1L, d_pol = 0L) %>% 
+  mutate(coalition = 
+           case_when(coalition == "Chile Vamos" ~ "ChV",
+                                    coalition == "Convergencia Democratica" ~ "DC",
+                                    coalition == "Frente Amplio" ~ "FA",
+                                    coalition == "La Fuerza de la Mayoria" ~ "FdM",
+                                    coalition %in% c("Coalicion Regionalista Verde","Independiente","Por todo Chile","Por Todo Chile","PTR","Sumemos","Union Patriotica",NA) ~ "Otro"))
 ```
 
 Prepare `df_politicamente` data
@@ -118,16 +119,15 @@ df_politicamente <- df_politicamente %>%
          #candidate level:
          candidate = candidato, candidate_district = distrito_dip,
          coalition = coalicion, party = partido, 
-         candidate_birth = nacimiento, d_women = d_mujer,
+         candidate_birth = nacimiento, d_female = d_mujer,
          d_incumbent_gen = d_incumbente_gen,
          d_elected = d_gano, spending_total = gasto_total, 
          spending_socialmedia = gasto_rrss,
          spending_socialmedia_pct = gasto_rrss_pct,
          income_total = ingreso_total, votes = votos, votes_pct = votos_pct,
-         d_pol, d_ct,
+         d_pol, d_ct,n_tweets,
          #reactions:
-         comments_count, shares_count, likes_count, love_count, wow_count,
-         haha_count, sad_count, angry_count) 
+         comments_count, shares_count, likes_count)
 
 ```
 
@@ -226,36 +226,11 @@ df_shares <- df_facebook  %>%
   group_by(candidate) %>%
   summarise(sum_shares=sum(shares_count)) 
 
-df_loves <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(sum_loves=sum(love_count)) 
-
-df_haha <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(sum_hahas=sum(haha_count)) 
-
-df_wow <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(sum_wows=sum(wow_count)) 
-
-df_sad <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(sum_sads=sum(sad_count)) 
-
-df_angry <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(sum_angries=sum(angry_count)) 
-
 # merge with the previosu dataset
 
 df_facebook_all <- df_facebook_all %>%
   left_join(., df_likes, by="candidate") %>%
-  left_join(., df_angry, by="candidate") %>%
   left_join(., df_comments, by="candidate") %>%
-  left_join(., df_haha, by="candidate") %>%
-  left_join(., df_loves, by="candidate") %>%
-  left_join(., df_sad, by="candidate") %>%
-  left_join(., df_wow, by="candidate") %>%
   left_join(., df_shares, by="candidate") 
 ```
 
@@ -271,60 +246,40 @@ df_commentsm <- df_facebook  %>%
 
 df_sharesm <- df_facebook  %>%
   group_by(candidate) %>%
-  summarise(mean_shares=mean(shares_count)) 
-
-df_lovesm <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(mean_loves=mean(love_count)) 
-
-df_haham <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(mean_hahas=mean(haha_count)) 
-
-df_wowm <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(mean_wows=mean(wow_count)) 
-
-df_sadm <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(mean_sads=mean(sad_count)) 
-
-df_angrym <- df_facebook  %>%
-  group_by(candidate) %>%
-  summarise(mean_angries=mean(angry_count)) 
+  summarise(mean_shares=mean(shares_count))
 
 ## Merge
 df_facebook_all <- df_facebook_all %>%
   left_join(., df_likesm, by="candidate") %>%
-  left_join(., df_angrym, by="candidate") %>%
   left_join(., df_commentsm, by="candidate") %>%
-  left_join(., df_haham, by="candidate") %>%
-  left_join(., df_lovesm, by="candidate") %>%
-  left_join(., df_sadm, by="candidate") %>%
-  left_join(., df_wowm, by="candidate") %>%
   left_join(., df_sharesm, by="candidate")
 ```
 
 The we merge this with candidate-level variables from `01_merge_facebook_data_post.rds`
 ```{r error=FALSE, warning=FALSE, message=FALSE}
 df_facebook <- df_facebook %>% 
-  select(candidate, candidate_district,coalition, list, party,
-         candidate_birth, d_women, d_incumbent_gen,
+  select(candidate, candidate_district,coalition, party,
+         candidate_birth, d_female, d_incumbent_gen,
          d_elected, votes, spending_total, spending_socialmedia, 
-         spending_socialmedia_pct, income_total, votes_pct, candidate_id, candidate_rut)
+         spending_socialmedia_pct, income_total, votes_pct, candidate_id, candidate_rut, n_tweets, d_ct, d_pol)
          
 df_facebook_candidate <- df_facebook_all %>% left_join(df_facebook) %>% 
   distinct(candidate, .keep_all = TRUE)
+
+#Clean some data:
+df_facebook_candidate <- df_facebook_candidate %>%
+   mutate_if(is.integer,as.double) %>%  
+    mutate(n_posts_programmatic = if_else(d_pol == 1 & is.na(n_posts_programmatic), 0, n_posts_programmatic),
+           n_posts_campaign = if_else(d_pol == 1 & is.na(n_posts_campaign), 0, n_posts_campaign),
+           n_posts_others = if_else(d_pol == 1 & is.na(n_posts_others), 0, n_posts_others),
+           n_posts_politics = if_else(d_pol == 1 & is.na(n_posts_politics), 0, n_posts_politics))
+
 ```
 
-Finally, we add the number of tweets to our dataset and save it:
 
+Save dataframe
 ```{r}
-df_facebook_candidate <- df_facebook_candidate %>% 
-  left_join(df_politicamente_tweets %>% select(candidate_id = candidato_id,
-                                               n_tweets))
-
-#Save dataframe 
 write_rds(df_facebook_candidate, "proc/01_facebook_data_candidate.rds")
 ```
+
 
