--- a/01_merge_facebook_data.Rmd
+++ b/01_merge_facebook_data.Rmd
@@ -12,12 +12,14 @@ This script integrates multiple sources, compiling Facebook data of the 2017 leg
 ```{r message=FALSE}
 #load packages
 library(tidyverse)
+library(here)
 ```
 
 ##### Crowdtangle
 
 ```{r error=FALSE, message=FALSE, warning=FALSE}
-df_crowdtangle <- read_csv("input/facebook_data//df_crowdtangle.csv") %>% 
+df_crowdtangle <- read_csv(here("input", "facebook_data",
+                                "df_crowdtangle.csv")) %>% 
   mutate(id_post = post_url %>% 
            str_extract("posts/\\d+$") %>% 
            str_remove("posts/"),
@@ -28,17 +30,23 @@ df_crowdtangle <- read_csv("input/facebook_data//df_crowdtangle.csv") %>%
 ##### Politicamente
 
 ```{r error=FALSE, message=FALSE,warning=FALSE}
-df_politicamente_posts <- read_csv("input/facebook_data/politicamente_be17_v6_posts-facebook.csv") %>% 
+df_politicamente_posts <- read_csv(
+  here("input", "facebook_data", "politicamente_be17_v6_posts-facebook.csv")
+) %>% 
   mutate(id_post = id %>% 
            str_extract("_\\d+$") %>% 
            str_remove("_"))
 
-df_politicamente_codif <- read_csv("input/facebook_data/politicamente_be17_v6_codificaciones.csv")
+df_politicamente_codif <- read_csv(
+  here("input", "facebook_data", "politicamente_be17_v6_codificaciones.csv")
+)
 
-df_politicamente_cands <- read_csv("input/facebook_data/politicamente_be17_v6_candidatos.csv")
+df_politicamente_cands <- read_csv(
+  here("input", "facebook_data", "politicamente_be17_v6_candidatos.csv")
+)
 
 df_politicamente_tweets <- read_csv(
-  "input/facebook_data/politicamente_be17_v6_tweets.csv"
+  here("input", "facebook_data", "politicamente_be17_v6_tweets.csv")
 ) %>% 
   count(twitter_id) %>% 
   rename(n_tweets = n) 
@@ -62,8 +70,10 @@ df_politicamente <- df_politicamente_posts %>%
 
 ##### Condor URLs
 ```{r error=FALSE,message=FALSE,warning=FALSE}
-df_condor_urls <- read_delim("input/facebook_data/df_condor_urls.csv", 
-                          ";", escape_double = FALSE, trim_ws = TRUE)
+df_condor_urls <- read_delim(
+  here("input", "facebook_data", "df_condor_urls.csv"), 
+  ";", escape_double = FALSE, trim_ws = TRUE
+)
 
 df_condor_urls <- df_condor_urls %>% 
   mutate(domain = str_remove(parent_domain,"\\..*")) %>% 
@@ -158,7 +168,7 @@ df_ct_pt_urls <- left_join(df_ct_pt_urls, variables)
 
 Save dataframe
 ```{r}
-write_rds(df_ct_pt_urls, "proc/01_facebook_data_post.rds")
+write_rds(df_ct_pt_urls, here("proc", "01_facebook_data_post.rds"))
 ```
 
 ### Merge Datasets (candidate level)
@@ -166,7 +176,7 @@ Now we are going to group the data at the candidate level for future analysis. T
 
 ```{r error=FALSE, message=FALSE, warning=FALSE}
 
-df_facebook <- read_rds("proc/01_facebook_data_post.rds")  
+df_facebook <- read_rds(here("proc", "01_facebook_data_post.rds"))
 
 df_facebook <- df_facebook %>% 
   filter(candidate_district==10 | candidate_district==11 | candidate_district==13) %>%
@@ -279,7 +289,7 @@ df_facebook_candidate <- df_facebook_candidate %>%
 
 Save dataframe
 ```{r}
-write_rds(df_facebook_candidate, "proc/01_facebook_data_candidate.rds")
+write_rds(df_facebook_candidate, here("proc", "01_facebook_data_candidate.rds"))
 ```
 
 
