--- a/04_analyze_geo_data.Rmd
+++ b/04_analyze_geo_data.Rmd
@@ -36,9 +36,9 @@ Prepare shapefiles:
 
 ibt <- ibt[!is.na(ibt$nse),]
 ibt_10_11_13_com <- ibt %>%
-  filter(ibt, comuna %in% c("PROVIDENCIA", "ÑUÑOA", "SANTIAGO","MACUL","SAN JOAQUÍN",
-                            "LA GRANJA","LAS CONDES", "VITACURA", "LO BARNECHEA","LA REINA","PEÑALOLÉN",
-                            "EL BOSQUE", "SAN RAMÓN", "PEDRO AGUIRRE CERDA","SAN MIGUEL","LO ESPEJO", "LA CISTERNA"))
+  filter(comuna %in% c("PROVIDENCIA", "ÑUÑOA", "SANTIAGO","MACUL","SAN JOAQUÍN",
+                       "LA GRANJA","LAS CONDES", "VITACURA", "LO BARNECHEA","LA REINA","PEÑALOLÉN",
+                       "EL BOSQUE", "SAN RAMÓN", "PEDRO AGUIRRE CERDA","SAN MIGUEL","LO ESPEJO", "LA CISTERNA"))
 
 
 shp_10_11_13_dis <- shp_com %>% 
@@ -211,9 +211,12 @@ cluster_3
 ### Save plots 
 
 ```{r warning=FALSE, message=FALSE}
-tmap_save(cluster_1, 'output/04_map_c1.png', width = 1920, height = 1080)
-tmap_save(cluster_2, 'output/04_map_c2.png', width = 1920, height = 1080)
-tmap_save(cluster_3, 'output/04_map_c3.png', width = 1920, height = 1080)
+tmap_save(cluster_1, here('output', '04_map_c1.png'), 
+          width = 1920, height = 1080)
+tmap_save(cluster_2, here('output', '04_map_c2.png'),
+          width = 1920, height = 1080)
+tmap_save(cluster_3, here('output', '04_map_c3.png'), 
+          width = 1920, height = 1080)
 
 ```
 
@@ -235,10 +238,9 @@ posts_geo_nse_cl <- posts_geo_nse_cl %>%
 
 ```
 
-Save data 04_:
-
+Save data:
 
 ```{r}
-write_rds( posts_geo_nse_cl,"proc/04_posts_geo_nse_cl_lf.rds")
+write_rds( posts_geo_nse_cl, here("proc", "04_posts_geo_nse_cl_lf.rds"))
 ```
 
