--- a/02a_get_geo_data.ipynb
+++ b/02a_get_geo_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,21 +107,21 @@
        "40725  POLYGON ((-70.54555 -33.59051, -70.54557 -33.5...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#load índice bienestar territorial 2012\n",
-    "ibt = gpd.read_file('input/geo_data/ibt_geo.shp', crs={'init': 'epsg:5361'})\n",
+    "ibt = gpd.read_file('input/geo_data/ibt/ibt_geo.shp', crs={'init': 'epsg:5361'})\n",
     "ibt = ibt.dropna(subset = ['nse']).reset_index(drop = True)\n",
     "ibt.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "4  barrio Huemul, Santiago, Region Metropolitana,... -70.651130 -33.474624  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        " ...]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,15 +1288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 369 ms, sys: 0 ns, total: 369 ms\n",
-      "Wall time: 369 ms\n"
+      "Wall time: 233 ms\n"
      ]
     }
    ],
@@ -1308,15 +1307,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 796 ms, sys: 11.6 ms, total: 808 ms\n",
-      "Wall time: 804 ms\n"
+      "Wall time: 497 ms\n"
      ]
     }
    ],
@@ -1328,20 +1326,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "#output table, with lat lon data and an associated NSE\n",
     "georef.to_csv('proc/02_posts_deployment_nse.csv', encoding = 'utf-8', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1360,9 +1351,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
