Add files of map.

--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -303,7 +303,7 @@ htmlfile <- list.files(pattern="\\.html$")
 
 file.copy(htmlfile, "output")
 
-file.remove(htmlfile)
+#file.remove(htmlfile)
 
 ```
 
