--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -289,8 +289,8 @@ map1 <- leaflet() %>%
 ### Save map
 
 ```{r }
-saveWidget(map1,here("index.html"), selfcontained = FALSE)
-webshot(here("index.html"),vwidth = 1920, vheight = 1080, file = here( "map_clusters.png"),
+saveWidget(map1,here("index.html"))
+webshot(here("index.html"),vwidth = 1920, vheight = 1080, file = here( "04b_capture_map_clusters.png"),
        cliprect = "viewport")
 
 ```
@@ -298,12 +298,14 @@ webshot(here("index.html"),vwidth = 1920, vheight = 1080, file = here( "map_clus
 
 ##### Ext
 
-```{r message=FALSE}
+```{r }
 htmlfile <- list.files(pattern="\\.html$")
-
+pngfile <- list.files(pattern = "\\.png$")
+file.copy(htmlfile, "output")
 file.copy(htmlfile, "output")
 
 file.remove(htmlfile)
+file.remove(pngfile)
 
 ```
 
