--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -289,7 +289,7 @@ map1 <- leaflet() %>%
 ### Save map
 
 ```{r }
-saveWidget(map1,here("index.html"))
+saveWidget(map1, file="index.html")
 webshot(here("index.html"),vwidth = 1920, vheight = 1080, file = here( "04b_capture_map_clusters.png"),
        cliprect = "viewport")
 
