--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -301,11 +301,13 @@ webshot(here("index.html"),vwidth = 1920, vheight = 1080, file = here( "04b_capt
 ```{r }
 htmlfile <- list.files(pattern="\\.html$")
 pngfile <- list.files(pattern = "\\.png$")
+folder_index <- list.files("index_files")
 file.copy(htmlfile, "output")
 file.copy(htmlfile, "output")
-
+file.copy(folder_index, "output")
 file.remove(htmlfile)
 file.remove(pngfile)
+file.remove(folder_index)
 
 ```
 
