Running all scripts at once (and minor changes)

--- a/02b_add_geo_data.Rmd
+++ b/02b_add_geo_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Add geo data and generate datasets at the post and candidate levels"
+title: "02b - Add geo data and generate datasets at the post and candidate levels"
 output: github_document
 ---
 ### Load libraries 
