--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Deployment of Candidates by Clusters"
+title: "04b - Deployment of Candidates by Clusters"
 output: github_document
 ---
 
@@ -45,11 +45,11 @@ Shapefiles: Socioeconomic Level
 ibt <- ibt[!is.na(ibt$nse),]
 
 ibt_10_11_13 <- ibt %>%
-  
-  filter(ibt, comuna %in% 
+  filter(comuna %in% 
            c("PROVIDENCIA", "ÑUÑOA", "SANTIAGO","MACUL","SAN JOAQUÍN",
-                            "LA GRANJA","LAS CONDES", "VITACURA", "LO BARNECHEA","LA REINA","PEÑALOLÉN",
-                            "EL BOSQUE", "SAN RAMÓN", "PEDRO AGUIRRE CERDA","SAN MIGUEL","LO ESPEJO", "LA CISTERNA"))
+             "LA GRANJA","LAS CONDES", "VITACURA", "LO BARNECHEA",
+             "LA REINA","PEÑALOLÉN", "EL BOSQUE", "SAN RAMÓN", 
+             "PEDRO AGUIRRE CERDA","SAN MIGUEL","LO ESPEJO", "LA CISTERNA"))
 
 ```
 
