--- a/04b_interactive_deployment_map.Rmd
+++ b/04b_interactive_deployment_map.Rmd
@@ -303,7 +303,7 @@ htmlfile <- list.files(pattern="\\.html$")
 pngfile <- list.files(pattern = "\\.png$")
 folder_index <- list.files("index_files")
 file.copy(htmlfile, "output")
-file.copy(htmlfile, "output")
+file.copy(pngfile, "output")
 file.copy(folder_index, "output")
 file.remove(htmlfile)
 file.remove(pngfile)
